# img2tensor

./: README.md  pyproject.toml
.github/workflows/: publish.yml
src/img2tensor/: core.py
src/img2tensor /: __init__.py  core.py
