[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "img2tensor"
version = "0.1.0"
authors = [
  { name="Sourabh Yadav" },
]
description = "Unified image to tensor utility with streaming TFRecord support"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy",
    "pillow",
    "pqdm",
    "opencv-python-headless",
]

[project.optional-dependencies]
torch = ["torch", "torchvision"]
tf = ["tensorflow"]
all = ["torch", "torchvision", "tensorflow"]

[tool.setuptools.packages.find]
where = ["src"]
